project2_handle/parser.output
Grammar

    0 $accept: Program END

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty
    4           | error

    5 ExtDef: Specifier ExtDecList SEMI
    6       | Specifier SEMI
    7       | Specifier FunDec CompSt
    8       | Specifier ExtDecList error
    9       | Specifier error

   10 ExtDecList: VarDec
   11           | VarDec COMMA ExtDecList

   12 Specifier: TYPE
   13          | StructSpecifier

   14 StructSpecifier: STRUCT ID LC DefList RC
   15                | STRUCT ID

   16 VarDec: ID
   17       | VarDec LB INT RB
   18       | UNKNOW

   19 FunDec: ID LP VarList RP
   20       | ID LP RP
   21       | ID LP error
   22       | ID LP VarList error
   23       | ID LP ID RP error

   24 VarList: ParamDec COMMA VarList
   25        | ParamDec

   26 ParamDec: Specifier VarDec

   27 CompSt: LC DefList StmtList RC

   28 StmtList: Stmt StmtList
   29         | %empty

   30 Stmt: Exp SEMI
   31     | CompSt
   32     | RETURN Exp SEMI
   33     | IF LP Exp RP Stmt
   34     | IF LP Exp RP Stmt ELSE Stmt
   35     | WHILE LP Exp RP Stmt
   36     | Exp error
   37     | RETURN Exp error

   38 DefList: Def DefList
   39        | %empty

   40 Def: Specifier DecList SEMI
   41    | Specifier DecList error

   42 DecList: Dec
   43        | Dec COMMA DecList

   44 Dec: VarDec
   45    | VarDec ASSIGN Exp

   46 Exp: Exp ASSIGN Exp
   47    | Exp AND Exp
   48    | Exp OR Exp
   49    | Exp LT Exp
   50    | Exp LE Exp
   51    | Exp GT Exp
   52    | Exp GE Exp
   53    | Exp NE Exp
   54    | Exp EQ Exp
   55    | Exp PLUS Exp
   56    | Exp MINUS Exp
   57    | Exp MUL Exp
   58    | Exp DIV Exp
   59    | Exp UNKNOW Exp
   60    | LP Exp RP
   61    | MINUS Exp
   62    | NOT Exp
   63    | ID LP Args RP
   64    | ID LP RP
   65    | Exp LB Exp RB
   66    | Exp DOT ID
   67    | ID
   68    | INT
   69    | FLOAT
   70    | CHAR
   71    | ID LP Args error
   72    | ID LP error
   73    | UNKNOW

   74 Args: Exp COMMA Args
   75     | Exp


Terminals, with rules where they appear

END (0) 0
error (256) 4 8 9 21 22 23 36 37 41 71 72
LP (258) 19 20 21 22 23 33 34 35 60 63 64 71 72
RP (259) 19 20 23 33 34 35 60 63 64
LC (260) 14 27
RC (261) 14 27
LB (262) 17 65
RB (263) 17 65
COMMA (264) 11 24 43 74
DOT (265) 66
SEMI (266) 5 6 30 32 40
LT (267) 49
LE (268) 50
GT (269) 51
GE (270) 52
NE (271) 53
EQ (272) 54
PLUS (273) 55
MINUS (274) 56 61
MUL (275) 57
DIV (276) 58
AND (277) 47
OR (278) 48
NOT (279) 62
ASSIGN (280) 45 46
STRUCT (281) 14 15
ID (282) 14 15 16 19 20 21 22 23 63 64 66 67 71 72
CHAR (283) 70
INT (284) 17 68
FLOAT (285) 69
WHILE (286) 35
TYPE (287) 12
IF (288) 33 34
ELSE (289) 34
RETURN (290) 32 37
UNKNOW (291) 18 59 73
LOWER_ELSE (292)
UMINUS (293)


Nonterminals, with rules where they appear

$accept (39)
    on left: 0
Program (40)
    on left: 1, on right: 0
ExtDefList (41)
    on left: 2 3 4, on right: 1 2
ExtDef (42)
    on left: 5 6 7 8 9, on right: 2
ExtDecList (43)
    on left: 10 11, on right: 5 8 11
Specifier (44)
    on left: 12 13, on right: 5 6 7 8 9 26 40 41
StructSpecifier (45)
    on left: 14 15, on right: 13
VarDec (46)
    on left: 16 17 18, on right: 10 11 17 26 44 45
FunDec (47)
    on left: 19 20 21 22 23, on right: 7
VarList (48)
    on left: 24 25, on right: 19 22 24
ParamDec (49)
    on left: 26, on right: 24 25
CompSt (50)
    on left: 27, on right: 7 31
StmtList (51)
    on left: 28 29, on right: 27 28
Stmt (52)
    on left: 30 31 32 33 34 35 36 37, on right: 28 33 34 35
DefList (53)
    on left: 38 39, on right: 14 27 38
Def (54)
    on left: 40 41, on right: 38
DecList (55)
    on left: 42 43, on right: 40 41 43
Dec (56)
    on left: 44 45, on right: 42 43
Exp (57)
    on left: 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63
    64 65 66 67 68 69 70 71 72 73, on right: 30 32 33 34 35 36 37 45
    46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 65 66 74 75
Args (58)
    on left: 74 75, on right: 63 71 74


State 0

    0 $accept: . Program END

    error   shift, and go to state 1
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    END  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    4 ExtDefList: error .

    $default  reduce using rule 4 (ExtDefList)


State 2

   14 StructSpecifier: STRUCT . ID LC DefList RC
   15                | STRUCT . ID

    ID  shift, and go to state 9


State 3

   12 Specifier: TYPE .

    $default  reduce using rule 12 (Specifier)


State 4

    0 $accept: Program . END

    END  shift, and go to state 10


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    END  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 11
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    5 ExtDef: Specifier . ExtDecList SEMI
    6       | Specifier . SEMI
    7       | Specifier . FunDec CompSt
    8       | Specifier . ExtDecList error
    9       | Specifier . error

    error   shift, and go to state 12
    SEMI    shift, and go to state 13
    ID      shift, and go to state 14
    UNKNOW  shift, and go to state 15

    ExtDecList  go to state 16
    VarDec      go to state 17
    FunDec      go to state 18


State 8

   13 Specifier: StructSpecifier .

    $default  reduce using rule 13 (Specifier)


State 9

   14 StructSpecifier: STRUCT ID . LC DefList RC
   15                | STRUCT ID .

    LC  shift, and go to state 19

    $default  reduce using rule 15 (StructSpecifier)


State 10

    0 $accept: Program END .

    $default  accept


State 11

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 12

    9 ExtDef: Specifier error .

    $default  reduce using rule 9 (ExtDef)


State 13

    6 ExtDef: Specifier SEMI .

    $default  reduce using rule 6 (ExtDef)


State 14

   16 VarDec: ID .
   19 FunDec: ID . LP VarList RP
   20       | ID . LP RP
   21       | ID . LP error
   22       | ID . LP VarList error
   23       | ID . LP ID RP error

    LP  shift, and go to state 20

    $default  reduce using rule 16 (VarDec)


State 15

   18 VarDec: UNKNOW .

    $default  reduce using rule 18 (VarDec)


State 16

    5 ExtDef: Specifier ExtDecList . SEMI
    8       | Specifier ExtDecList . error

    error  shift, and go to state 21
    SEMI   shift, and go to state 22


State 17

   10 ExtDecList: VarDec .
   11           | VarDec . COMMA ExtDecList
   17 VarDec: VarDec . LB INT RB

    LB     shift, and go to state 23
    COMMA  shift, and go to state 24

    $default  reduce using rule 10 (ExtDecList)


State 18

    7 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 25

    CompSt  go to state 26


State 19

   14 StructSpecifier: STRUCT ID LC . DefList RC

    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $default  reduce using rule 39 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 8
    DefList          go to state 28
    Def              go to state 29


State 20

   19 FunDec: ID LP . VarList RP
   20       | ID LP . RP
   21       | ID LP . error
   22       | ID LP . VarList error
   23       | ID LP . ID RP error

    error   shift, and go to state 30
    RP      shift, and go to state 31
    STRUCT  shift, and go to state 2
    ID      shift, and go to state 32
    TYPE    shift, and go to state 3

    Specifier        go to state 33
    StructSpecifier  go to state 8
    VarList          go to state 34
    ParamDec         go to state 35


State 21

    8 ExtDef: Specifier ExtDecList error .

    $default  reduce using rule 8 (ExtDef)


State 22

    5 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 5 (ExtDef)


State 23

   17 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 36


State 24

   11 ExtDecList: VarDec COMMA . ExtDecList

    ID      shift, and go to state 37
    UNKNOW  shift, and go to state 15

    ExtDecList  go to state 38
    VarDec      go to state 17


State 25

   27 CompSt: LC . DefList StmtList RC

    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $default  reduce using rule 39 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 8
    DefList          go to state 39
    Def              go to state 29


State 26

    7 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 7 (ExtDef)


State 27

   40 Def: Specifier . DecList SEMI
   41    | Specifier . DecList error

    ID      shift, and go to state 37
    UNKNOW  shift, and go to state 15

    VarDec   go to state 40
    DecList  go to state 41
    Dec      go to state 42


State 28

   14 StructSpecifier: STRUCT ID LC DefList . RC

    RC  shift, and go to state 43


State 29

   38 DefList: Def . DefList

    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $default  reduce using rule 39 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 8
    DefList          go to state 44
    Def              go to state 29


State 30

   21 FunDec: ID LP error .

    $default  reduce using rule 21 (FunDec)


State 31

   20 FunDec: ID LP RP .

    $default  reduce using rule 20 (FunDec)


State 32

   23 FunDec: ID LP ID . RP error

    RP  shift, and go to state 45


State 33

   26 ParamDec: Specifier . VarDec

    ID      shift, and go to state 37
    UNKNOW  shift, and go to state 15

    VarDec  go to state 46


State 34

   19 FunDec: ID LP VarList . RP
   22       | ID LP VarList . error

    error  shift, and go to state 47
    RP     shift, and go to state 48


State 35

   24 VarList: ParamDec . COMMA VarList
   25        | ParamDec .

    COMMA  shift, and go to state 49

    $default  reduce using rule 25 (VarList)


State 36

   17 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 50


State 37

   16 VarDec: ID .

    $default  reduce using rule 16 (VarDec)


State 38

   11 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 11 (ExtDecList)


State 39

   27 CompSt: LC DefList . StmtList RC

    LP      shift, and go to state 51
    LC      shift, and go to state 25
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53
    ID      shift, and go to state 54
    CHAR    shift, and go to state 55
    INT     shift, and go to state 56
    FLOAT   shift, and go to state 57
    WHILE   shift, and go to state 58
    IF      shift, and go to state 59
    RETURN  shift, and go to state 60
    UNKNOW  shift, and go to state 61

    $default  reduce using rule 29 (StmtList)

    CompSt    go to state 62
    StmtList  go to state 63
    Stmt      go to state 64
    Exp       go to state 65


State 40

   17 VarDec: VarDec . LB INT RB
   44 Dec: VarDec .
   45    | VarDec . ASSIGN Exp

    LB      shift, and go to state 23
    ASSIGN  shift, and go to state 66

    $default  reduce using rule 44 (Dec)


State 41

   40 Def: Specifier DecList . SEMI
   41    | Specifier DecList . error

    error  shift, and go to state 67
    SEMI   shift, and go to state 68


State 42

   42 DecList: Dec .
   43        | Dec . COMMA DecList

    COMMA  shift, and go to state 69

    $default  reduce using rule 42 (DecList)


State 43

   14 StructSpecifier: STRUCT ID LC DefList RC .

    $default  reduce using rule 14 (StructSpecifier)


State 44

   38 DefList: Def DefList .

    $default  reduce using rule 38 (DefList)


State 45

   23 FunDec: ID LP ID RP . error

    error  shift, and go to state 70


State 46

   17 VarDec: VarDec . LB INT RB
   26 ParamDec: Specifier VarDec .

    LB  shift, and go to state 23

    $default  reduce using rule 26 (ParamDec)


State 47

   22 FunDec: ID LP VarList error .

    $default  reduce using rule 22 (FunDec)


State 48

   19 FunDec: ID LP VarList RP .

    $default  reduce using rule 19 (FunDec)


State 49

   24 VarList: ParamDec COMMA . VarList

    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    Specifier        go to state 33
    StructSpecifier  go to state 8
    VarList          go to state 71
    ParamDec         go to state 35


State 50

   17 VarDec: VarDec LB INT RB .

    $default  reduce using rule 17 (VarDec)


State 51

   60 Exp: LP . Exp RP

    LP      shift, and go to state 51
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53
    ID      shift, and go to state 54
    CHAR    shift, and go to state 55
    INT     shift, and go to state 56
    FLOAT   shift, and go to state 57
    UNKNOW  shift, and go to state 61

    Exp  go to state 72


State 52

   61 Exp: MINUS . Exp

    LP      shift, and go to state 51
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53
    ID      shift, and go to state 54
    CHAR    shift, and go to state 55
    INT     shift, and go to state 56
    FLOAT   shift, and go to state 57
    UNKNOW  shift, and go to state 61

    Exp  go to state 73


State 53

   62 Exp: NOT . Exp

    LP      shift, and go to state 51
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53
    ID      shift, and go to state 54
    CHAR    shift, and go to state 55
    INT     shift, and go to state 56
    FLOAT   shift, and go to state 57
    UNKNOW  shift, and go to state 61

    Exp  go to state 74


State 54

   63 Exp: ID . LP Args RP
   64    | ID . LP RP
   67    | ID .
   71    | ID . LP Args error
   72    | ID . LP error

    LP  shift, and go to state 75

    $default  reduce using rule 67 (Exp)


State 55

   70 Exp: CHAR .

    $default  reduce using rule 70 (Exp)


State 56

   68 Exp: INT .

    $default  reduce using rule 68 (Exp)


State 57

   69 Exp: FLOAT .

    $default  reduce using rule 69 (Exp)


State 58

   35 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 76


State 59

   33 Stmt: IF . LP Exp RP Stmt
   34     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 77


State 60

   32 Stmt: RETURN . Exp SEMI
   37     | RETURN . Exp error

    LP      shift, and go to state 51
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53
    ID      shift, and go to state 54
    CHAR    shift, and go to state 55
    INT     shift, and go to state 56
    FLOAT   shift, and go to state 57
    UNKNOW  shift, and go to state 61

    Exp  go to state 78


State 61

   73 Exp: UNKNOW .

    $default  reduce using rule 73 (Exp)


State 62

   31 Stmt: CompSt .

    $default  reduce using rule 31 (Stmt)


State 63

   27 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 79


State 64

   28 StmtList: Stmt . StmtList

    LP      shift, and go to state 51
    LC      shift, and go to state 25
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53
    ID      shift, and go to state 54
    CHAR    shift, and go to state 55
    INT     shift, and go to state 56
    FLOAT   shift, and go to state 57
    WHILE   shift, and go to state 58
    IF      shift, and go to state 59
    RETURN  shift, and go to state 60
    UNKNOW  shift, and go to state 61

    $default  reduce using rule 29 (StmtList)

    CompSt    go to state 62
    StmtList  go to state 80
    Stmt      go to state 64
    Exp       go to state 65


State 65

   30 Stmt: Exp . SEMI
   36     | Exp . error
   46 Exp: Exp . ASSIGN Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . LT Exp
   50    | Exp . LE Exp
   51    | Exp . GT Exp
   52    | Exp . GE Exp
   53    | Exp . NE Exp
   54    | Exp . EQ Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . MUL Exp
   58    | Exp . DIV Exp
   59    | Exp . UNKNOW Exp
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID

    error   shift, and go to state 81
    LB      shift, and go to state 82
    DOT     shift, and go to state 83
    SEMI    shift, and go to state 84
    LT      shift, and go to state 85
    LE      shift, and go to state 86
    GT      shift, and go to state 87
    GE      shift, and go to state 88
    NE      shift, and go to state 89
    EQ      shift, and go to state 90
    PLUS    shift, and go to state 91
    MINUS   shift, and go to state 92
    MUL     shift, and go to state 93
    DIV     shift, and go to state 94
    AND     shift, and go to state 95
    OR      shift, and go to state 96
    ASSIGN  shift, and go to state 97
    UNKNOW  shift, and go to state 98


State 66

   45 Dec: VarDec ASSIGN . Exp

    LP      shift, and go to state 51
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53
    ID      shift, and go to state 54
    CHAR    shift, and go to state 55
    INT     shift, and go to state 56
    FLOAT   shift, and go to state 57
    UNKNOW  shift, and go to state 61

    Exp  go to state 99


State 67

   41 Def: Specifier DecList error .

    $default  reduce using rule 41 (Def)


State 68

   40 Def: Specifier DecList SEMI .

    $default  reduce using rule 40 (Def)


State 69

   43 DecList: Dec COMMA . DecList

    ID      shift, and go to state 37
    UNKNOW  shift, and go to state 15

    VarDec   go to state 40
    DecList  go to state 100
    Dec      go to state 42


State 70

   23 FunDec: ID LP ID RP error .

    $default  reduce using rule 23 (FunDec)


State 71

   24 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 24 (VarList)


State 72

   46 Exp: Exp . ASSIGN Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . LT Exp
   50    | Exp . LE Exp
   51    | Exp . GT Exp
   52    | Exp . GE Exp
   53    | Exp . NE Exp
   54    | Exp . EQ Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . MUL Exp
   58    | Exp . DIV Exp
   59    | Exp . UNKNOW Exp
   60    | LP Exp . RP
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID

    RP      shift, and go to state 101
    LB      shift, and go to state 82
    DOT     shift, and go to state 83
    LT      shift, and go to state 85
    LE      shift, and go to state 86
    GT      shift, and go to state 87
    GE      shift, and go to state 88
    NE      shift, and go to state 89
    EQ      shift, and go to state 90
    PLUS    shift, and go to state 91
    MINUS   shift, and go to state 92
    MUL     shift, and go to state 93
    DIV     shift, and go to state 94
    AND     shift, and go to state 95
    OR      shift, and go to state 96
    ASSIGN  shift, and go to state 97
    UNKNOW  shift, and go to state 98


State 73

   46 Exp: Exp . ASSIGN Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . LT Exp
   50    | Exp . LE Exp
   51    | Exp . GT Exp
   52    | Exp . GE Exp
   53    | Exp . NE Exp
   54    | Exp . EQ Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . MUL Exp
   58    | Exp . DIV Exp
   59    | Exp . UNKNOW Exp
   61    | MINUS Exp .
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID

    LB      shift, and go to state 82
    DOT     shift, and go to state 83
    UNKNOW  shift, and go to state 98

    $default  reduce using rule 61 (Exp)


State 74

   46 Exp: Exp . ASSIGN Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . LT Exp
   50    | Exp . LE Exp
   51    | Exp . GT Exp
   52    | Exp . GE Exp
   53    | Exp . NE Exp
   54    | Exp . EQ Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . MUL Exp
   58    | Exp . DIV Exp
   59    | Exp . UNKNOW Exp
   62    | NOT Exp .
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID

    LB      shift, and go to state 82
    DOT     shift, and go to state 83
    UNKNOW  shift, and go to state 98

    $default  reduce using rule 62 (Exp)


State 75

   63 Exp: ID LP . Args RP
   64    | ID LP . RP
   71    | ID LP . Args error
   72    | ID LP . error

    error   shift, and go to state 102
    LP      shift, and go to state 51
    RP      shift, and go to state 103
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53
    ID      shift, and go to state 54
    CHAR    shift, and go to state 55
    INT     shift, and go to state 56
    FLOAT   shift, and go to state 57
    UNKNOW  shift, and go to state 61

    Exp   go to state 104
    Args  go to state 105


State 76

   35 Stmt: WHILE LP . Exp RP Stmt

    LP      shift, and go to state 51
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53
    ID      shift, and go to state 54
    CHAR    shift, and go to state 55
    INT     shift, and go to state 56
    FLOAT   shift, and go to state 57
    UNKNOW  shift, and go to state 61

    Exp  go to state 106


State 77

   33 Stmt: IF LP . Exp RP Stmt
   34     | IF LP . Exp RP Stmt ELSE Stmt

    LP      shift, and go to state 51
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53
    ID      shift, and go to state 54
    CHAR    shift, and go to state 55
    INT     shift, and go to state 56
    FLOAT   shift, and go to state 57
    UNKNOW  shift, and go to state 61

    Exp  go to state 107


State 78

   32 Stmt: RETURN Exp . SEMI
   37     | RETURN Exp . error
   46 Exp: Exp . ASSIGN Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . LT Exp
   50    | Exp . LE Exp
   51    | Exp . GT Exp
   52    | Exp . GE Exp
   53    | Exp . NE Exp
   54    | Exp . EQ Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . MUL Exp
   58    | Exp . DIV Exp
   59    | Exp . UNKNOW Exp
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID

    error   shift, and go to state 108
    LB      shift, and go to state 82
    DOT     shift, and go to state 83
    SEMI    shift, and go to state 109
    LT      shift, and go to state 85
    LE      shift, and go to state 86
    GT      shift, and go to state 87
    GE      shift, and go to state 88
    NE      shift, and go to state 89
    EQ      shift, and go to state 90
    PLUS    shift, and go to state 91
    MINUS   shift, and go to state 92
    MUL     shift, and go to state 93
    DIV     shift, and go to state 94
    AND     shift, and go to state 95
    OR      shift, and go to state 96
    ASSIGN  shift, and go to state 97
    UNKNOW  shift, and go to state 98


State 79

   27 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 27 (CompSt)


State 80

   28 StmtList: Stmt StmtList .

    $default  reduce using rule 28 (StmtList)


State 81

   36 Stmt: Exp error .

    $default  reduce using rule 36 (Stmt)


State 82

   65 Exp: Exp LB . Exp RB

    LP      shift, and go to state 51
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53
    ID      shift, and go to state 54
    CHAR    shift, and go to state 55
    INT     shift, and go to state 56
    FLOAT   shift, and go to state 57
    UNKNOW  shift, and go to state 61

    Exp  go to state 110


State 83

   66 Exp: Exp DOT . ID

    ID  shift, and go to state 111


State 84

   30 Stmt: Exp SEMI .

    $default  reduce using rule 30 (Stmt)


State 85

   49 Exp: Exp LT . Exp

    LP      shift, and go to state 51
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53
    ID      shift, and go to state 54
    CHAR    shift, and go to state 55
    INT     shift, and go to state 56
    FLOAT   shift, and go to state 57
    UNKNOW  shift, and go to state 61

    Exp  go to state 112


State 86

   50 Exp: Exp LE . Exp

    LP      shift, and go to state 51
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53
    ID      shift, and go to state 54
    CHAR    shift, and go to state 55
    INT     shift, and go to state 56
    FLOAT   shift, and go to state 57
    UNKNOW  shift, and go to state 61

    Exp  go to state 113


State 87

   51 Exp: Exp GT . Exp

    LP      shift, and go to state 51
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53
    ID      shift, and go to state 54
    CHAR    shift, and go to state 55
    INT     shift, and go to state 56
    FLOAT   shift, and go to state 57
    UNKNOW  shift, and go to state 61

    Exp  go to state 114


State 88

   52 Exp: Exp GE . Exp

    LP      shift, and go to state 51
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53
    ID      shift, and go to state 54
    CHAR    shift, and go to state 55
    INT     shift, and go to state 56
    FLOAT   shift, and go to state 57
    UNKNOW  shift, and go to state 61

    Exp  go to state 115


State 89

   53 Exp: Exp NE . Exp

    LP      shift, and go to state 51
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53
    ID      shift, and go to state 54
    CHAR    shift, and go to state 55
    INT     shift, and go to state 56
    FLOAT   shift, and go to state 57
    UNKNOW  shift, and go to state 61

    Exp  go to state 116


State 90

   54 Exp: Exp EQ . Exp

    LP      shift, and go to state 51
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53
    ID      shift, and go to state 54
    CHAR    shift, and go to state 55
    INT     shift, and go to state 56
    FLOAT   shift, and go to state 57
    UNKNOW  shift, and go to state 61

    Exp  go to state 117


State 91

   55 Exp: Exp PLUS . Exp

    LP      shift, and go to state 51
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53
    ID      shift, and go to state 54
    CHAR    shift, and go to state 55
    INT     shift, and go to state 56
    FLOAT   shift, and go to state 57
    UNKNOW  shift, and go to state 61

    Exp  go to state 118


State 92

   56 Exp: Exp MINUS . Exp

    LP      shift, and go to state 51
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53
    ID      shift, and go to state 54
    CHAR    shift, and go to state 55
    INT     shift, and go to state 56
    FLOAT   shift, and go to state 57
    UNKNOW  shift, and go to state 61

    Exp  go to state 119


State 93

   57 Exp: Exp MUL . Exp

    LP      shift, and go to state 51
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53
    ID      shift, and go to state 54
    CHAR    shift, and go to state 55
    INT     shift, and go to state 56
    FLOAT   shift, and go to state 57
    UNKNOW  shift, and go to state 61

    Exp  go to state 120


State 94

   58 Exp: Exp DIV . Exp

    LP      shift, and go to state 51
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53
    ID      shift, and go to state 54
    CHAR    shift, and go to state 55
    INT     shift, and go to state 56
    FLOAT   shift, and go to state 57
    UNKNOW  shift, and go to state 61

    Exp  go to state 121


State 95

   47 Exp: Exp AND . Exp

    LP      shift, and go to state 51
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53
    ID      shift, and go to state 54
    CHAR    shift, and go to state 55
    INT     shift, and go to state 56
    FLOAT   shift, and go to state 57
    UNKNOW  shift, and go to state 61

    Exp  go to state 122


State 96

   48 Exp: Exp OR . Exp

    LP      shift, and go to state 51
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53
    ID      shift, and go to state 54
    CHAR    shift, and go to state 55
    INT     shift, and go to state 56
    FLOAT   shift, and go to state 57
    UNKNOW  shift, and go to state 61

    Exp  go to state 123


State 97

   46 Exp: Exp ASSIGN . Exp

    LP      shift, and go to state 51
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53
    ID      shift, and go to state 54
    CHAR    shift, and go to state 55
    INT     shift, and go to state 56
    FLOAT   shift, and go to state 57
    UNKNOW  shift, and go to state 61

    Exp  go to state 124


State 98

   59 Exp: Exp UNKNOW . Exp

    LP      shift, and go to state 51
    MINUS   shift, and go to state 52
    NOT     shift, and go to state 53
    ID      shift, and go to state 54
    CHAR    shift, and go to state 55
    INT     shift, and go to state 56
    FLOAT   shift, and go to state 57
    UNKNOW  shift, and go to state 61

    Exp  go to state 125


State 99

   45 Dec: VarDec ASSIGN Exp .
   46 Exp: Exp . ASSIGN Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . LT Exp
   50    | Exp . LE Exp
   51    | Exp . GT Exp
   52    | Exp . GE Exp
   53    | Exp . NE Exp
   54    | Exp . EQ Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . MUL Exp
   58    | Exp . DIV Exp
   59    | Exp . UNKNOW Exp
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID

    LB      shift, and go to state 82
    DOT     shift, and go to state 83
    LT      shift, and go to state 85
    LE      shift, and go to state 86
    GT      shift, and go to state 87
    GE      shift, and go to state 88
    NE      shift, and go to state 89
    EQ      shift, and go to state 90
    PLUS    shift, and go to state 91
    MINUS   shift, and go to state 92
    MUL     shift, and go to state 93
    DIV     shift, and go to state 94
    AND     shift, and go to state 95
    OR      shift, and go to state 96
    ASSIGN  shift, and go to state 97
    UNKNOW  shift, and go to state 98

    $default  reduce using rule 45 (Dec)


State 100

   43 DecList: Dec COMMA DecList .

    $default  reduce using rule 43 (DecList)


State 101

   60 Exp: LP Exp RP .

    $default  reduce using rule 60 (Exp)


State 102

   72 Exp: ID LP error .

    $default  reduce using rule 72 (Exp)


State 103

   64 Exp: ID LP RP .

    $default  reduce using rule 64 (Exp)


State 104

   46 Exp: Exp . ASSIGN Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . LT Exp
   50    | Exp . LE Exp
   51    | Exp . GT Exp
   52    | Exp . GE Exp
   53    | Exp . NE Exp
   54    | Exp . EQ Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . MUL Exp
   58    | Exp . DIV Exp
   59    | Exp . UNKNOW Exp
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID
   74 Args: Exp . COMMA Args
   75     | Exp .
